<resources>
    <string name="app_name">Toronto Sightseeing Places</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="interstitial_ads_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_id">ca-app-pub-5763468518685682~8564389843</string>
    <string name="point_0">The CN Tower is a 553.3 m–high concrete communications and observation tower in downtown Toronto, Ontario\n<b>Address:</b> 301 Front St W, Toronto, ON M5V 2T6\n<b>Height:</b> 1,815′\n<b>Construction started:</b> February 6, 1973\n<b>Opened:</b> October 2, 1976\n<b>Hours:</b>Thursday	8:30AM–10:30PM\n\t\t\t\t\t\tFriday	8:30AM–10:30PM\n\t\t\t\t\t\tSaturday	8:30AM–10:30PM\n\t\t\t\t\t\tSunday	8:30AM–10:30PM\n\t\t\t\t\t\tMonday	8:30AM–10:30PM\n\t\t\t\t\t\tTuesday	8:30AM–10:30PM\n\t\t\t\t\t\tWednesday	8:30AM–10:30PM\n<b>Province:</b> Ontario\n<b>Phone:</b> (416) 868–6937\n<b>Architect:</b> John Andrews\n<b>Did you know:</b> The CN Tower is struck by lightning approximately 75 times each year\n</string>
    <string name="point_1">The Royal Ontario Museum is a museum of art, world culture and natural history in Toronto, Canada. It is one of the largest museums in North America, the largest in Canada\n<b>Address:</b> 100 Queens Park, Toronto, ON M5S 2C6\n<b>Hours:</b>Thursday	10AM–5:30PM\n\t\t\t\t\t\tFriday	10AM–5:30PM\n\t\t\t\t\t\tSaturday	10AM–5:30PM\n\t\t\t\t\t\tSunday	10AM–5:30PM\n\t\t\t\t\t\tMonday	10AM–5:30PM\n\t\t\t\t\t\tTuesday	10AM–5:30PM\n\t\t\t\t\t\tWednesday	10AM–5:30PM\nProvince: Ontario\n<b>Architecture firm:</b> Chapman and Oxley\n<b>Phone:</b> (416) 586–8000\n<b>Architects:</b> Daniel Libeskind, Frank Darling, John A. Pearson\n<b>Architectural styles:</b> Romanesque Revival architecture, Byzantine Revival architecture\n<b>Artworks:</b> Ukiyo–e print by Kitagawa Utamaro of a hunting party, Ukiyo-e print of Fukagawa, from "36 views of Mt. Fuji"\n<b>Did you know:</b> The Royal Ontario Museum originally opened as 5 separate museums devoted to archaeology, geology, mineralogy, palaeontology and zoology, which amalgamated in 1955\n </string>
    <string name="point_2">Casa Loma is a Gothic Revival style house and gardens in midtown Toronto, Ontario, Canada, that is now a museum and landmark. It was built as a residence for financier Sir Henry Mill Pellatt. Casa Loma was constructed from 1911 to 1914.\n<b>Address:</b> 1 Austin Terrace, Toronto, ON M5R 1X8\n<b>Hours:</b>Friday	9:30AM–5PM\n\t\t\t\t\t\tSaturday	9:30AM–5PM\n\t\t\t\t\t\tSunday	9:30AM–5PM\n\t\t\t\t\t\tMonday	9:30AM–10PM\n\t\t\t\t\t\tTuesday	9:30AM–10PM\n\t\t\t\t\t\tWednesday	9:30AM–5PM\n\t\t\t\t\t\tThursday	9:30AM–5PM\n<b>Cost:</b> 3.5 million USD\n<b>Province:</b>Ontario\n<b>Phone: </b>(416) 923–1171\n<b>Owner:</b>Municipal government of Toronto\n<b>Architect:</b> E. J. Lennox\n<b>Did you know:</b> The city seized Casa Loma in 1933 for $27,303 in back taxes.\n</string>
    <string name="point_3">The Hockey Hall of Fame is located in Toronto, Ontario, Canada. Dedicated to the history of ice hockey, it is a museum and a hall of fame.\n<b>Address:</b> 30 Yonge St, Toronto, ON M5E 1X8\n<b>Hours:</b>Friday	10AM–5PM\n\t\t\t\t\t\tSaturday	9:30AM–6PM\n\t\t\t\t\t\tSunday	10:30AM–5PM\n\t\t\t\t\t\tMonday	10AM–5PM\n\t\t\t\t\t\tTuesday	10AM–5PM\n\t\t\t\t\t\tWednesday	10AM–5PM\n\t\t\t\t\t\tThursday	10AM–5PM\n<b>Province:</b> Ontario\n<b>Phone:</b> (416) 360–7765\n<b>Architect:</b> S. George Curry\n<b>Did you know:</b> The 22 minute film plays at the top and half past the hour in the Hockey Hall of Fame TSN Theatre and is included in the price of admission.\n</string>
    <string name="point_4">The Art Gallery of Ontario is an art museum in Toronto, Ontario, Canada. Its collection includes more than 80,000 works spanning the first century to the present day.\n<b>Address:</b> 317 Dundas St W, Toronto, ON M5T 1G4\n<b>Hours:</b>Friday	10:30AM–9PM\n\t\t\t\t\t\tSaturday	10:30AM–5:30PM\n\t\t\t\t\t\tSunday	10:30AM–5:30PM\n\t\t\t\t\t\tMonday	Closed\n\t\t\t\t\t\tTuesday	10:30AM–5PM\n\t\t\t\t\t\tWednesday	10:30AM–9PM\n\t\t\t\t\t\tThursday	10:30AM–5PM\n<b>Province:</b> Ontario\n<b>Phone:</b> (416) 979–6648\n<b>Completed:</b> 2004\n<b>Date completed:</b> 2008\n<b>Architect:</b> Frank Gehry\n</string>
    <string name="point_5">Ripley Aquarium of Canada is a public aquarium in Toronto, Ontario. The aquarium is one of three aquariums owned and operated by Ripley Entertainment. It is located in downtown Toronto, just southeast of the CN Tower.\n<b>Address:</b> 288 Bremner Blvd, Toronto, ON M5V 3L9\n<b>Opened:</b> October 16, 2013\n<b>Floor space:</b> 3 acres\n<b>Volume of largest tank:</b> 100,300 ft³\n<b>Hours:</b>Friday	9AM–11PM\n\t\t\t\t\t\tSaturday	9AM–11PM\n\t\t\t\t\t\tSunday	9AM–11PM\n\t\t\t\t\t\tMonday	9AM–11PM\n\t\t\t\t\t\tTuesday	9AM–11PM\n\t\t\t\t\t\tWednesday	9AM–11PM\n\t\t\t\t\t\tThursday	9AM–11PM\n<b>Province:</b> Ontario\n<b>Phone:</b> (647) 351–3474\n<b>Number of animals:</b> 16,000\n<b>Public transit access:</b> Union Station, Unio\n</string>
    <string name="point_6">The Distillery District is a commercial and residential district in Toronto, Ontario, Canada. Located east of downtown, it contains numerous cafés, restaurants, and shops housed within heritage buildings of the former Gooderham and Worts Distillery.\n<b>Province:</b> Ontario\n<b>City:</b> Toronto\n<b>Designated as world heritage site:</b> 1988\n</string>
    <string name="point_7">Spacious market with 100+ vendors, bakers, butchers and artisans, with produce and antiques on weekends.\n<b>Address:</b> 93 Front St E, Toronto, ON M5E 1C3\n<b>Hours:</b> Open today · 8AM–7PM\n<b>Phone:</b> (416) 392–7219\n</string>
    <string name="point_8">The Toronto Islands are a chain of small islands in Lake Ontario, south of mainland Toronto, Ontario, Canada.\n<b>Province:</b> Ontario\n</string>
    <string name="point_9">Huge array of shops, clothiers and restaurants in a soaring, historic mall with a glass ceiling.\n<b>Address:</b> 220 Yonge St, Toronto, ON M5B 2H1\n<b>Hours:</b> Open today · 10AM–9:30PM\n<b>Phone:</b> (416) 598–8560\n</string>
    <string name="point_10">Lake Ontario is one of the five Great Lakes of North America. It is surrounded on the north, west, and southwest by the Canadian province of Ontario, and on the south and east by the American state of …\n<b>Area:</b> 18,960 km²\n<b>Surface elevation:</b> 74 m\n<b>Max. depth:</b> 802 ft (244 m)\n<b>Location:</b> North America\n<b>Shore length1:</b> 634 mi (1,020 km) plus 78 mi (126 km) for islands\n<b>Fish:</b> Walleye, Chinook salmon, Coho salmon\n</string>
    <string name="point_11">Ontario Science Centre is a science museum in Toronto, Ontario, Canada, near the Don Valley Parkway about 11 kilometres northeast of downtown on Don Mills Road just south of Eglinton Avenue East.\n<b>Address:</b> 770 Don Mills Rd, Toronto, ON M3C 1T3\n<b>Hours:</b> Open today · 10AM–4PM\n<b>Phone:</b> (416) 696–1000\n<b>CEO:</b> Maurice Bitran (Jun 16, 2014–)\n<b>Province:</b> Ontario\n<b>Founded:</b> September 26, 1969\n<b>Director:</b> Maurice Bitran\n<b>Owner:</b> Government of Ontario\n<b>Did you know:</b> The Ontario Science Centre is easily accessible by public transport.\n</string>
    <string name="point_12">Queen Street West describes both the western branch of Queen Street, a major east-west thoroughfare, and a series of neighbourhoods or commercial districts, situated west of Yonge Street in downtown Toronto, Ontario, Canada\n<b>Length:</b> 5.6 km\n<b>East end:</b> Yonge Street\n<b>West end:</b> Roncesvalles Avenue; King Street\n<b>Existed:</b> 1793 (as Lot St.); 1851 (renamed Queen St.) – present\n<b>Province:</b> Ontario\n</string>
    <string name="point_13">The Bata Shoe Museum is a footwear museum in downtown Toronto, Canada, located at Bloor St. and St George St. in the Bloor St. Culture Corridor. The museum collects, researches, preserves and exhibits, footwear from around the world. Wikipedia\n<b>Address:</b> 327 Bloor St W, Toronto, ON M5S 1W7\n<b>Hours:</b> Open today · 10AM–5PM\n<b>Province:</b> Ontario\n<b>Phone:</b> (416) 979–7799\n</string>
    <string name="point_14">High Park is a municipal park in Toronto, Ontario, Canada. It spans 161 hectares, and is a mixed recreational and natural park, with sporting facilities, cultural facilities, educational facilities, gardens, playgrounds and a zoo.\n<b>Address:</b> 1873 Bloor St W, Toronto, ON M6R 2Z3\n<b>Area:</b> 398 acres\n<b>Hours:</b> Open today · Open 24 hours\n<b>Province:</b> Ontario\n<b>Phone:</b> (416) 338–0338\n<b>Owner:</b> Toronto\n<b>Did you know:</b> The park has a designated off–leash area for dogs and several paths where dogs are allowed to run free.\n</string>
    <string name="cn_tower">CN Tower</string>
    <string name="royal_ontario_museum">Royal Ontario Museum</string>
    <string name="casa_loma">Casa Loma</string>
    <string name="hockey_hall">Hockey Hall of Fame</string>
    <string name="art_gallery">Art Gallery of Ontario</string>
    <string name="ripley_aquarium">Ripley Aquarium of Canada</string>
    <string name="distillery_istrict">Distillery District</string>
    <string name="lawerence_market">St. Lawrence Market South</string>
    <string name="toronto_islands">Toronto Islands</string>
    <string name="toronto_eaton">Toronto Eaton Centre</string>
    <string name="lake_ontario">Lake Ontario</string>
    <string name="ontario_science">Ontario Science Centre</string>
    <string name="queen_street">Queen Street West</string>
    <string name="bata_shoe">Bata Shoe Museum</string>
    <string name="high_park">High Park</string>
    <string name="china_town">Chinatown, Toronto</string>
    <string name="yorkvillw">Yorkville, Toronto</string>
    <string name="canada_wonderland">Canada Wonderland</string>
    <string name="kensigton_market">Kensington Market</string>
    <string name="toronto_zoo">Toronto Zoo</string>
    <string name="union_station">Union Station</string>
    <string name="black_creek">Black Creek Pioneer Village</string>
    <string name="centreville_amusement">Centreville Amusement Park</string>
    <string name="allan_gardens">Allan Gardens</string>
    <string name="nathan_phillips">Nathan Phillips Square</string>
    <string name="fort_york">Fort York</string>
    <string name="city_hall">Toronto City Hall</string>
    <string name="gardiner_museum">Gardiner Museum</string>
    <string name="edwards_gardens">Edwards Gardens</string>
    <string name="yonge_dundas_square">Yonge-Dundas Square</string>
    <string name="toronto_harbour">Toronto Harbour</string>
    <string name="the_beaches">The Beaches</string>
    <string name="textile_museum">Textile Museum of Canada</string>
    <string name="spadina_house">Spadina House</string>
    <string name="toronto_waterfront">Toronto waterfront</string>
    <string name="gooderham_building">Gooderham Building</string>
    <string name="hallan_point_beach">Hanlan Point Beach</string>
    <string name="roy_thomson_hall">Roy Thomson Hall</string>
    <string name="sugar_beach">Sugar Beach</string>
    <string name="don_valley_brick_works">Don Valley Brick Works</string>
    <string name="harbourfront_centre">Harbourfront Centre</string>
    <string name="edgewalk_the_cn_tower">EdgeWalk at the CN Tower</string>
    <string name="chinguacousy_park">Chinguacousy Park</string>
    <string name="centennial_park">Centennial Park</string>
    <string name="woodbine_beach">Woodbine Beach</string>
    <string name="aga_khan_museum">Aga Khan Museum</string>
    <string name="toronto_island_park">Toronto Island Park</string>
    <string name="player_one_amusement">Player One Amusement Group</string>
    <string name="riverdale_farm">Riverdale Farm</string>
    <string name="legoland_discovery_centre">Legoland Discovery Centre</string>
</resources>